...
  ZipCodeContainer,
  SeachZipCodeButton,
  ZipCodeView,
} from './styles';

interface SignUpFormData {
  name: string;
  email: string;
  ssn: string;
  cellphone: string;
  zipCode: string;
  address: string;
  number: string;
  complement: string;
  city: string;
  uf: string;
  district: string;
  password: string;
  passwordConfirm: string;
  birthDate: string;
}

const ProfileSignUp: React.FC = () => {
  const [termsModal, setTermsModal] = useState(false);
  const [policyModal, setPolicyModal] = useState(false);

...
  return (
    <KeyboardAvoidingView
      style={{ flex: 1 }}
      behavior={Platform.OS === 'ios' ? 'padding' : undefined}
      enabled
    >
      <ScrollView keyboardShouldPersistTaps="handled" testID="container">
        <Modal isVisible={termsModal}>
          <TermsModal onClose={() => setTermsModal(false)} />
        </Modal>
        <Modal isVisible={policyModal}>
          <PolicyPrivacyModal onClose={() => setPolicyModal(false)} />
        </Modal>
...
                    onSubmitEditing={() => handleSearchZipCode()}
                    testID="zipCode"
                  />
                </ZipCodeView>
                <SeachZipCodeButton
                  onPress={() => handleSearchZipCode()}
                  testID="searchZipCode"
                >
                  {zipCodeLoading ? (
                    <ActivityIndicator color="#fff" size="small" />
                  ) : (
                    <FeatherIcon
                      name="search"
...
                }}
                defaultTextStyle={{ color: '#999', fontSize: RFValue(14) }}
                dropdownStyle={{ width: '50%' }}
                dropdownTextStyle={{ width: '100%', fontSize: RFValue(14) }}
                textStyle={{ color: '#000' }}
                onSelect={item => setGender(GetGendersList()[Number(item)])}
                testID="sexDropdown"
                dropdownListProps={{ testID: 'dropdownItem' }}
              />
              <Input
                name="password"
                ref={passwordRef}
                password
                textContentType="oneTimeCode"
...
                textContentType="oneTimeCode"
                icon="lock"
                autoCapitalize="none"
                placeholder="Confirmar senha"
                returnKeyType="send"
                onSubmitEditing={() => formRef.current?.submitForm()}
                testID="confirmPassword"
              />
              <TermsPrivacyContainer>
                <Switch
                  trackColor={{ false: '#767577', true: Colors.primary }}
                  thumbColor={readTerms ? '#fff' : '#fff'}
                  ios_backgroundColor="#3e3e3e"
                  onValueChange={() => setReadTerms(!readTerms)}
                  value={readTerms}
                  testID="readTerms"
                />
                <ReadTermsText>
                  Li e concordo com os
                  <TermsButton onPress={() => setTermsModal(true)}>
                    <TermsButtonText>TERMOS DE USO</TermsButtonText>
                  </TermsButton>
...
                    <TermsButtonText>POLÍTICA DE PRIVACIDADE</TermsButtonText>
                  </TermsButton>
                  do app AHAYA
                </ReadTermsText>
              </TermsPrivacyContainer>
              <Button
                title="submitButton"
                loading={loading}
                onPress={() => formRef.current?.submitForm()}
                testID="submitButton"
              >
                Cadastrar
              </Button>
...
