...
  useEffect(() => {
    const updateDialogOptions = {
      updateTitle: 'Atenção!',
      optionalUpdateMessage:
        'Atualização importante disponível! Deseja instalar?',
      optionalIgnoreButtonLabel: 'Não',
      optionalInstallButtonLabel: 'Sim',
    };

    api
      .get('/profile/appMaintence')
      .then(response => {
        if (String(response.data.ok) === String(true)) {
...
              />
              <Tab.Screen
                name="Options"
                component={OptionsRoutes}
                options={{
                  headerShown: false,
                  tabBarTestID: 'optionRoute',
                  tabBarLabel: 'Opções',
                  tabBarIcon: ({ color }) => (
                    <FeatherIcon name="menu" size={RFValue(25)} color={color} />
                  ),
                }}
              />
...
