...
import { ImageBackground } from 'react-native';
import {
  createStackNavigator,
  CardStyleInterpolators,
} from '@react-navigation/stack';
import colors from '@app/Config/Colors';
import SelectSport from '../pages/Modules/Appointment/SelectSport';
import SelectDayHour from '../pages/Modules/Appointment/SelectDayHour';
import SelectMaterials from '../pages/Modules/Appointment/SelectMaterials';
import AppointmentResume from '../pages/Modules/Appointment/AppointmentResume';
import CreditCardPayment from '../pages/Modules/Appointment/CreditCardPayment';
import PixPayment from '../pages/Modules/Appointment/PixPayment';
import AppointmentCreated from '../pages/Modules/Appointment/AppointmentCreated';
...
